# name: TestFind.test_find[uvloop]
  <class 'list'> [
    <class 'dict'> {
      'color': '#955887',
      'count': 2,
      'description': 'Measure example sense peace economy.',
      'id': 2,
      'name': 'Help',
    },
    <class 'dict'> {
      'color': '#629F70',
      'count': 2,
      'description': 'American whole magazine truth stop whose.',
      'id': 1,
      'name': 'Three',
    },
  ]
---
# name: TestFind.test_find_by_name[uvloop]
  <class 'list'> [
    <class 'dict'> {
      'color': '#629F70',
      'count': 0,
      'description': 'American whole magazine truth stop whose.',
      'id': 1,
      'name': 'Three',
    },
  ]
---
# name: TestFind.test_find_by_name[uvloop].1
  <class 'list'> [
  ]
---
# name: test_edit[uvloop-None]
  <class 'dict'> {
    'color': '#629F70',
    'count': 2,
    'description': 'American whole magazine truth stop whose.',
    'id': 1,
    'name': 'Summer',
  }
---
# name: test_get[uvloop-200]
  <class 'dict'> {
    'color': '#629F70',
    'count': 2,
    'description': 'American whole magazine truth stop whose.',
    'id': 1,
    'name': 'Three',
  }
---
# name: test_get[uvloop-404]
  <class 'dict'> {
    'id': 'not_found',
    'message': 'Not found',
  }
---
# name: test_remove[uvloop-204]
  None
---
# name: test_remove[uvloop-404]
  <class 'dict'> {
    'id': 'not_found',
    'message': 'Not found',
  }
---
